src/scss/styles.scss
// Overriding the default variable values is the best way to customize your
// CSS without writing _new_ styles. For example, change you can either change
// `$body-color` or write more CSS that override's Bootstrap's CSS like so:
// `body { color: red; }`.


//
// Bring in Bootstrap
//

// Option 1
//
// Import all of Bootstrap's CSS
@import "../../node_modules/bootstrap/scss/bootstrap.scss";

/*
// Option 2
//
// Place variable overrides first, then import just the styles you need. Note that some stylesheets are required no matter what.

// Toggle global options
$enable-gradients: true;
$enable-shadows: true;

$offcanvas-box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);

// Customize some defaults
$body-color: #333;
$body-bg: #fff;
$border-radius: .4rem;
$success: #7952b3;

// Required
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
@import "~bootstrap/scss/maps";
@import "~bootstrap/scss/mixins";
@import "~bootstrap/scss/utilities";
@import "~bootstrap/scss/root";
@import "~bootstrap/scss/reboot";

@import "~bootstrap/scss/type";
// @import "~bootstrap/scss/images";
@import "~bootstrap/scss/containers";
@import "~bootstrap/scss/grid";
// @import "~bootstrap/scss/tables";
// @import "~bootstrap/scss/forms";
@import "~bootstrap/scss/buttons";
@import "~bootstrap/scss/transitions";
@import "~bootstrap/scss/dropdown";
// @import "~bootstrap/scss/button-group";
// @import "~bootstrap/scss/nav";
// @import "~bootstrap/scss/navbar"; // Requires nav
// @import "~bootstrap/scss/card";
// @import "~bootstrap/scss/breadcrumb";
// @import "~bootstrap/scss/accordion";
// @import "~bootstrap/scss/pagination";
// @import "~bootstrap/scss/badge";
// @import "~bootstrap/scss/alert";
// @import "~bootstrap/scss/progress";
// @import "~bootstrap/scss/list-group";
@import "~bootstrap/scss/close";
// @import "~bootstrap/scss/toasts";
@import "~bootstrap/scss/modal"; // Requires transitions
// @import "~bootstrap/scss/tooltip";
@import "~bootstrap/scss/popover";
// @import "~bootstrap/scss/carousel";
// @import "~bootstrap/scss/spinners";
@import "~bootstrap/scss/offcanvas"; // Requires transitions
// @import "~bootstrap/scss/placeholders";

// Helpers
// @import "helpers";

// Utilities
@import "~bootstrap/scss/utilities/api";


//
// Custom styles
//

@import "icon-list";
*/

@import './style-home.scss';
@import './style-experience.scss';
@import'./projects.scss';

:is(button.material-symbols-outlined, button.material-icons) {
  font-family: 'Material Symbols Outlined';
}

//-----------------START-HEADER----------------------------

header {
  background-color: black;
  color: white;
  height: 88px;

  @include media-breakpoint-up(lg) {
    background-color: #393838;
  }
}

#section-socials>img {
  width: 35px;
  height: 35px;

  &:hover {
    border-radius: 7px;
    box-shadow: 0 0 7px 4px #8a8989;
  }
}

img[alt="Argentina Programa"]:hover {
  border-radius: 7px;
  box-shadow: 0 0 7px 4px #8a8989;
}

#menu-Hamb {
  // font-family: 'Material Icons';
  color: #b3b3b3;
  font-size: 20px;
  background-color: transparent;
  outline: none;
  border: transparent;
}

button.save {
  color: #FA1C1C;
  border: 1px solid #FA1C1C;
  font-size: 34px;
  background-color: #393838;
}

#sectionBtn {
  font-family: Montserrat, 'Open Sans', Lato, 'sans-serif';
  font-size: 20px;
  color: #b3b3b3;
}

[data-bs-toggle="dropdown"]:hover {
  border-radius: 7px;
  box-shadow: 0 0 7px 4px #8a8989;
}

.tooltip.innerRed {


  &>.tooltip-arrow::before {
    border-color: rgba(255, 0, 0, 0.623) transparent transparent transparent;
  }

  &>.tooltip-inner {
    background-color: rgb(205, 30, 30);
  }
}

//-----------------END-HEADER----------------------------
//-----------------START-MAIN----------------------------

.main-section {
  position: relative;

  & img {
    width: 100%;
    margin: 0;
    padding: 0;
  }
}

.Main404 {
  & img {
    width: 50%;
  }
}


//-----------------END-MAIN----------------------------
//-----------------START-FOOTER----------------------------

footer {
  background-color: black;
  height: 375px;
  font: 500 16px Montserrat, 'Open Sans', Lato, 'sans-serif';
  color: white;

  @include media-breakpoint-up(lg) {
    background-color: #393838;
    height: 400px;
    font-size: 19px;
  }

  & a {
    text-decoration: none;
    // font: 500 22px Montserrat, 'Open Sans', Lato, 'sans-serif';
    color: white;
    line-height: 1.5;
    display: block;
    transition: border-bottom 0.5s ease-in-out, font-size 0.2s ease-in-out;

    &:hover {
      color: white;
      font-size: 20px;
      width: 250px;
      border-bottom: 6px solid #5a5a5a;
      transition: border-bottom 0.5s ease-in-out, font-size 0.2s ease-in-out;

      @include media-breakpoint-down(lg) {
        font-size: 17px;
      }
    }
  }

  & .typer-header {
    background-color: #D9D9D9;
    height: 35px;
    border-radius: 5px 5px 0 0;

    & p {
      font: 500 16px 'Courier Prime', monospace;
      color: black;
    }

    & button {
      // font-family: 'Material Symbols Outlined';
      height: 32px;
    }
  }

  .typer-body {
    background-color: black;
    border: 1px solid white;
    border-radius: 0 0 5px 5px;
    height: 50px;
    overflow: auto;

    & p {
      font: 500 16px 'Courier Prime', monospace;
      color: #FD0B0B;
    }
  }

}

//-----------------END-FOOTER----------------------------

//-----------------EDIT-BUTTONS--------------------------
.edit-button {
  // font-family: 'Material Symbols Outlined';
  height: 50px;
  width: 50px;
  color: #FA1C1C;
  border: 1px solid #FA1C1C;
  font-size: 34px;
  background-color: #393838;

  &:hover {
    border-radius: 7px;
    box-shadow: 0 0 7px 4px #8a8989;
  }
}

.edit-top-left {
  position: absolute;
  z-index: 11;
  top: -30px;
  left: 5px;
}


.edit-top-right {
  position: absolute;
  z-index: 11;
  top: -50px;
  left: 85%;
}

//-----------------------MODAL-------------------
.modal-outer {
  position: fixed;
  inset: 0 0 0 0;
  background-color: rgba(0, 0, 0, 0.5);
  pointer-events: none;
  opacity: 0;
  transition: opacity 0.5s;

  &.open {
    z-index: 20;
    opacity: 1;
    pointer-events: all;
  }
}

.modal-inner {
  background-color: white;
  box-shadow: 0 0 10px 10px;
  transform: translateY(-100vh);
  transition: all 0.5s
}

